# meer21cm

./: .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTORS.rst  DEVELOPING.md  INSTALLATION.md  README.md  codecov.yml  pyproject.toml  setup.py
.github/workflows/: python-package.yml
docs/source/: cookbook.rst  examples.rst
docs/source/cookbook/: 2019_Lband.ipynb  2021_Lband_gama_cross.ipynb  check_noiselike.ipynb  fg_sim.ipynb  gal_dndz.ipynb  mode_mixing.ipynb  weights.ipynb
docs/source/examples/: busy_week_1.ipynb  custom_survey.ipynb  log.ipynb  quick_start.ipynb
papers/pdf/: specs.py
papers/validation/: LRGELG_dndz.npz  LRG_dndz.npz  README.md  func_00.py  func_01.py  func_01_split.py  func_02.py  func_beam.py  func_beam_split.py  func_fullsim.py  plot_00.ipynb  plot_01.ipynb  plot_02.ipynb  specs.py
scripts/: check_commit_msg.py
src/meer21cm/: __init__.py  cosmology.py  dataanalysis.py  fg.py  inference.py  io.py  mock.py  plot.py  power.py  skymap.py  stack.py  telescope.py  transfer.py  util.py
tests/: test_cosmology.py  test_dataanalysis.py  test_fg.py  test_import.py  test_inference.py  test_io.py  test_mock.py  test_pipeline.py  test_plot.py  test_power.py  test_skymap.py  test_stack.py  test_telescope.py  test_transfer.py  test_util.py
