[build-system]
requires = ["setuptools>=43.0",
            "wheel",
           ]
build-backend = "setuptools.build_meta"

[project]
name = "meer21cm"
version = "0.7.0"
authors = [
  { name="Zhaoting Chen", email="ztchenustc@gmail.com" },
]
description = "A package for 21cm intensity mapping data analysis with MeerKLASS"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    'scipy',
    "healpy",
    "matplotlib",
    "astropy",
    'halomod',
    "katversion@git+https://github.com/Sefa76/katversion@deprecation_pkg_resources",
    "katbeam@git+https://github.com/Sefa76/katbeam@deprecation_pkg_resources",
    "emcee",
    "nautilus-sampler",
    "pygdsm@git+https://github.com/telegraphic/pygdsm",
    "pysm3",
]


[project.urls]
Homepage = "https://github.com/zhaotingchen/meer21cm"
Issues = "https://github.com/zhaotingchen/meer21cm/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "mpi4py",
    "baccoemu",
]
lint = [
    "black",
    "flake8",
    "pre-commit",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
    "numpydoc",
    "nbsphinx",
    "ipykernel"
]
full = ["meer21cm[test]","meer21cm[lint]","meer21cm[docs]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]
